--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ https://www.google.com/search?q=food+restaurant&hl=EN&tbm=isch&source=hp&biw=109
 #Restaurant1
 {
     margin-top: 30px;
-    padding-top: 15px;
+    padding-top: 0px;
     padding-bottom: 15px;
     padding-left: 40px;
    background-color: black;
@@ -87,9 +87,10 @@ https://www.google.com/search?q=food+restaurant&hl=EN&tbm=isch&source=hp&biw=109
 {
    
     color: white;
-    float: right;
-    padding-right: 350px;
-    padding-top: 20px;
+
+    display:inline-block;
+    padding-top: 30px;
+    padding-left: 30px;
     
 }
 #b1
@@ -109,8 +110,8 @@ https://www.google.com/search?q=food+restaurant&hl=EN&tbm=isch&source=hp&biw=109
 #Restaurant2
 {
     margin-top: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 0px;
+    padding-bottom: 18px;
     padding-left: 40px;
    background-color: black;
    opacity: 0.85;
@@ -130,9 +131,11 @@ https://www.google.com/search?q=food+restaurant&hl=EN&tbm=isch&source=hp&biw=109
 {
    
     color: white;
-    float: right;
-    padding-right: 550px;
-    padding-top: 20px;
+    
+   display:inline-block;
+    padding-top: 30px;
+    padding-left: 30px;
+  
     
 }
 #b2
@@ -221,9 +224,6 @@ h4
     text-align: center;
     color: black;
 }
-
-
-
 
 
 
